--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       liff.init({liffId: "1660780726-A7wGxmaR"}, function(){
         liff.ready.then(() =>{
           if(liff.isLoggedIn()){
-             var dd = getParameterByName("br")
+             var dd = getParameterByName("ba")
             
     
-    if(dd === "moa"){
+    if(dd === "mop"){
       var ee = getParameterByName("flex")
       var aa = [
          {
